--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -186,7 +186,7 @@
 /* Modal box */
 .modal-content {
   background-color: white;
-  margin: 10% auto;
+  margin: 7% auto;
   padding: 20px;
   width: 500px;
   border-radius: 8px;
